[package]
name = "rust_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false